# sq_engine

./: .gitignore  CMakeLists.txt  vcpkg.json
.claude/: CLAUDE.md
.claude/plan/: c-2d-3d-streamed-axolotl.md  phase4-resize-ecs-rendering.md  phase5-camera-uniform-buffer-descriptor-set.md  vulkan-pipeline-skeleton.md
engine/: CMakeLists.txt
engine/include/sq/ecs/: archetype.hpp  component_storage.hpp  entity.hpp  registry.hpp  view.hpp
engine/include/sq/graphics/: command_buffers.hpp  debug_messenger.hpp  device.hpp  graphics_pipeline.hpp  mesh.hpp  physical_device.hpp  render_pass.hpp  renderer.hpp  swapchain.hpp  sync_objects.hpp  uniform_buffer.hpp  vulkan_instance.hpp  window.hpp
engine/include/sq/scene/: camera.hpp  transform.hpp
engine/src/ecs/: archetype.cpp  registry.cpp
engine/src/graphics/: command_buffers.cpp  debug_messenger.cpp  device.cpp  graphics_pipeline.cpp  mesh.cpp  physical_device.cpp  render_pass.cpp  renderer.cpp  swapchain.cpp  sync_objects.cpp  uniform_buffer.cpp  vulkan_instance.cpp  window.cpp
engine/src/scene/: camera.cpp
sandbox/: CMakeLists.txt  main.cpp
sandbox_graphics/: CMakeLists.txt  main.cpp
shaders/: triangle.frag  triangle.vert
tests/: CMakeLists.txt  ecs_tests.cpp
